--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,3 +1,12 @@
 {
-  "livePreview": false
+  "livePreview": false,
+  "defaultViewMode": "preview",
+  "pdfExportSettings": {
+    "includeName": false,
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  },
+  "newFileLocation": "current"
 }
