--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,6 +1,6 @@
 {
   "livePreview": true,
-  "defaultViewMode": "preview",
+  "defaultViewMode": "source",
   "pdfExportSettings": {
     "includeName": false,
     "pageSize": "Letter",
