--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,10 +2,10 @@
   "livePreview": true,
   "defaultViewMode": "source",
   "pdfExportSettings": {
-    "includeName": true,
+    "includeName": false,
     "pageSize": "A4",
     "landscape": false,
-    "margin": "0",
+    "margin": "1",
     "downscalePercent": 100
   },
   "newFileLocation": "current",
